[tool.poetry]
name = "money-mapper"
version = "0.1.0"
description = ""
authors = ["ArtemKhymenko <ak@workconsult.ua>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.27"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
